feat(admin): update config-files and handle all viewport data sync

--- a/packages/moten-admin/src/assets/styles/variables/_color.scss
+++ b/packages/moten-admin/src/assets/styles/variables/_color.scss
@@ -9,4 +9,5 @@
   --color-edit-render-block-bg: #ffffff;
   --color-edit-render-block-border: #d0d0d0;
   --color-edit-render-block-border-hover: var(--color-active-text);
+  --color-config-block-bg: #f3f5f7;
 }
