feat: 开发拖拽 配置区 组件 列数选择

--- a/packages/moten-editor/src/assets/styles/base/_reset.scss
+++ b/packages/moten-editor/src/assets/styles/base/_reset.scss
@@ -284,6 +284,9 @@ button:focus {
   outline: 1px dotted;
   outline: 5px auto -webkit-focus-ring-color;
 }
+input {
+  border: 0;
+}
 input,
 button,
 select,
